# nsts-sdl-dps

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  GENERATE_CMAKE.sh  README.md
cmake/: BuildHALProgram.cmake  BuildHALSFC.cmake  BuildRuntime.cmake  InstallWrappers.cmake  TestHalProgram.cmake  Uv.cmake
cmake/templates/: asm101s.sh.in  fcmcmp.sh.in  gpc-batch.sh.in  gpc-dbg.sh.in  gpc-dump.sh.in  gpc-gui.sh.in  gpc.sh.in  halsc.in  ibmobjdump.sh.in  lnk101.sh.in  rldanalyze.sh.in
code/: BENCH  HAL.HALS.RUNMAC  PASS.REL32V0  TOOLS.COMPILER.CLIST  TOOLS.PASS.SIMASM  TOOLS.SYSTEM.CLIST
src/: XCOM-I
src/ASM101S/: pyproject.toml
src/ASM101S/asm101s/: ASM101S.py  __init__.py  __main__.py  asm.ebnf  assemble.py  cli.py  compareListing.py  expressions.py  fieldParser.py  model101.py  objectWriter.py  parserAsm.py  readObject101S.py
src/LNK101/: pyproject.toml
src/LNK101/lnk101/: __init__.py  addr.py  addrcon.py  asciiToEbcdic.py  cli.py  dump_rld.py  esddump.py  extract_fcmcmp_diffs.py  fcmcmp.py  linkconfig.py  linker.py  objModule.py  objdump.py  readObject101S.py  repro.py  rldanalyze.py
test/: 021-SIMPLE.expected.out6  021-SIMPLE.in5  029-DATATYPES-gen.py  029-DATATYPES.expected.out6  037-ROOTS-gen.py  037-ROOTS.expected.out6  037-ROOTS.in5  039-CORNERS.in5  044-ORTHONORMAL.in5  046-XYZ_TO_POLAR.in5  047-ROWS-gen.py  047-ROWS.expected.out6  053-PARALLAX.expected.out6  053-PARALLAX.in5  085-FACTORIAL.in5  091-NEWTON_SQRT.in5  095-TAN_SUMS.in5  128-MASS.in5  154-ADD.in5  159-AGE.in5  172-OUTER.in5  193-TEST_X.in5  CMakeLists.txt  generate_baselines.py  halsfmt.py  test_addrcon.py  test_external_syms.py  test_ibm_float.c
test/baselines/: 001-exp0_5.expected.out6  002-FLOAT_LITERAL.expected.out6  003-FLOAT_LITERAL_EDGES.expected.out6  021-SIMPLE.expected.out6  021-SIMPLE.status  029-DATATYPES.expected.out6  029-DATATYPES.status  037-ROOTS.expected.out6  037-ROOTS.status  039-CORNERS.expected.out6  039-CORNERS.status  044-ORTHONORMAL.expected.out6  044-ORTHONORMAL.status  046-XYZ_TO_POLAR.expected.out6  046-XYZ_TO_POLAR.status  047-ROWS.expected.out6  047-ROWS.status  052-TABLE.expected.out6  053-PARALLAX.status  071-DARTBOARD_APPROXIMATION.expected.out6  080-EXAMPLE_4.status  080-EXAMPLE_4A.expected.out6  085-FACTORIAL.expected.out6  085-FACTORIAL.status  091-NEWTON_SQRT.expected.out6  091-NEWTON_SQRT.status  095-TAN_SUMS.expected.out6  095-TAN_SUMS.status  104-EXAMPLE_1.expected.out6  106-EXAMPLE_2.expected.out6  107-EXAMPLE_3.expected.out6  107-EXAMPLE_3.status  107-EXAMPLE_4.expected.out6  108-EXAMPLE_5.expected.out6  108-EXAMPLE_5.status  112-EXAMPLE_6.expected.out6  112-EXAMPLE_6.status  113-EXAMPLE_7.expected.out6  113-EXAMPLE_7.status  117-EXAMPLE_8.expected.out6  (+60 more)
test/fcmcmp/: test_fcmcmp.py  test_simple_do.fcm  test_simple_do.sym.json  test_simple_do.unrelocated.fcm
test/halTests/: BENCH  progHal  usersManual
test/regress/: 001-exp0_5.hal  002-FLOAT_LITERAL.hal  003-FLOAT_LITERAL_EDGES.hal  VXSCLEAR.hal
test/unit/: FIELDWIDTH.hal  IO_CONTROL.hal  IO_READ.hal  IO_READ.in5  PREP_LITERAL.hal
vscode/: hals-lsp  sdl.code-workspace
vscode/tatsu-ebnf-vscode/: README.md  language-configuration.json  package.json
vscode/tatsu-ebnf-vscode/syntaxes/: tatsu-ebnf.tmLanguage.json
